@@ -1,12 +1,20 @@
 ﻿TodoList
 
 Pendiente
-        Cuando se encripta la aplicación
         Al leer las categorías si da error al cargar el JSON que tome la versión de backup.
-        Traducciones de Inglés y Español.
-
+        Traducciones de Inglés y Español. (Jesús)
+		
+27/08/2018
+		La ruleta ya no está limitada por las vueltas, ya que generaba la misma categoría siempre a máxima potencia. También se ha adaptado por si hubiera una única categoría.
+		Al pasar turno se indica el siguiente jugador y se muestra la ruleta (para ver estadísticas). Varios retoques del resto de proceso para adaptar este punto.		
+		
+26/08/2018
+        Cuando se encripta la aplicación con proguard crashea. (Fixed) Se ha excluido de la encriptación el fichero del modelo json
+		Se ha mejorado el control de errores de GPG cuando no se puede conectar.
+        En las invitaciones se captura el jugador que invita o con quién se está jugando.
 25/08/2018
 		La ruleta tiene un fallo si se intente hacer SWIPE varias veces (se ralenteza). Tiene relación con el SONIDO de la ruleta (FIX)
+		Se corrige falle si se cambia de modo Multijugador a Repaso.
 24/08/2018
     Invitaciones:
         Ahora las invitaciones inician la partida online automáticamente (an ambos modos)
